# SDL_Runtime

./: .gitignore  CMakeLists.txt
include/common/: CommonDefines.h
include/engine/: Engine.h  EngineConfigLoader.h
include/engine/config/: EngineConfig.h
include/game/: Game.h
include/game/board/: GameBoard.h  GameBoardAnimator.h  MoveSelector.h
include/game/config/: GameCfg.h
include/game/defines/: ChessDefines.h  ChessStructs.h
include/game/logic/: GameLogic.h  InputInverter.h
include/game/panels/: ManagementConsole.h  PiecePromotionPanel.h
include/game/panels/buttons/: PiecePromotionButton.h
include/game/panels/config/: PiecePromotionButtonCfg.h  PiecePromotionPanelCfg.h
include/game/pieces/: PieceHandler.h  PieceHandlerPopulator.h
include/game/pieces/types/: Bishop.h  ChessPiece.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h  UnfinishedPiece.h
include/game/proxies/: GameBoardProxy.h  GameProxy.h
include/game/utils/: BoardPos.h  BoardUtils.h
manager_utils/: CMakeLists.txt
manager_utils/include/manager_utils/config/: DrawMgrCfg.h  ManagerHandlerCfg.h  RsrcMgrCfg.h
manager_utils/include/manager_utils/debug/: DebugConsole.h
manager_utils/include/manager_utils/drawing/: Image.h  Text.h  Widget.h
manager_utils/include/manager_utils/input/: ButtonBase.h
manager_utils/include/manager_utils/managers/: DrawMgr.h  ManagerHandler.h  MgrBase.h  RsrcMgr.h  TimerMgr.h
manager_utils/include/manager_utils/time/: TimerClient.h  TimerData.h
manager_utils/src/debug/: DebugConsole.cpp
manager_utils/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
manager_utils/src/input/: ButtonBase.cpp
manager_utils/src/managers/: DrawMgr.cpp  ManagerHandler.cpp  RsrcMgr.cpp  TimerMgr.cpp
manager_utils/src/time/: TimerClient.cpp
sdl_utils/: CMakeLists.txt
sdl_utils/include/sdl_utils/: InputEvent.h  MonitorWindow.h  Renderer.h  SDLLoader.h  Texture.h
sdl_utils/include/sdl_utils/config/: ImageContainerCfg.h  MonitorWindowCfg.h  TextContainerCfg.h
sdl_utils/include/sdl_utils/containers/: ImageContainer.h  TextContainer.h
sdl_utils/src/: InputEvent.cpp  MonitorWindow.cpp  Renderer.cpp  SDLLoader.cpp  Texture.cpp
sdl_utils/src/containers/: ImageContainer.cpp  TextContainer.cpp
src/: main.cpp
src/engine/: Engine.cpp  EngineConfigLoader.cpp
src/game/: Game.cpp
src/game/board/: GameBoard.cpp  GameBoardAnimator.cpp  MoveSelector.cpp
src/game/logic/: GameLogic.cpp  InputInverter.cpp
src/game/panels/: ManagementConsole.cpp  PiecePromotionPanel.cpp
src/game/panels/buttons/: PiecePromotionButton.cpp
src/game/pieces/: PieceHandler.cpp  PieceHandlerPopulator.cpp
src/game/pieces/types/: Bishop.cpp  ChessPiece.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  UnfinishedPiece.cpp
src/game/utils/: BoardUtils.cpp
utils/: CMakeLists.txt
utils/include/utils/drawing/: Color.h  DrawParams.h  Point.h  Rectangle.h
utils/include/utils/input/: EventDefines.h
utils/include/utils/thread/: ThreadUtils.h
utils/include/utils/time/: Time.h
utils/src/drawing/: Color.cpp  DrawParams.cpp  Point.cpp  Rectangle.cpp
utils/src/thread/: ThreadUtils.cpp
utils/src/time/: Time.cpp
